05/02/07 Bastien Boussau & Julien Dutheil
* Node properties are now splitted into NodeProperties and BranchProperties.
  Bootstrap values belong to the last category, and are now properly updated
	when rerooting a tree.

28/01/07 -*- Version 1.3.1 -*-

27/01/07 Julien Dutheil
* Change getTree method in NNISearchable interface to getTopology, and
getValue to getTopologyValue.
  This solve a bug in DRHomogeneousTreeLikelihood and avoid confusion with
	TreeLikelihood::getTree method, although both methods are identical.
* No more dynamic_cast in NNITopologySearch + bug solved in methods FAST and BETTER.
* Remove non required virtual inheritence to solve linker errors.

19/01/07 -*- Version 1.3 -*-

19/01/07 Julien Dutheil
* Removed duplicated functions in HomogeneousTreeLikelihood.
* Code update

10/01/07 Julien Dutheil
* Parsimony classes updated to match the new NNISearchable implementation.

03/01/07 Julien Dutheil
* --enable-virtual-cov option in configure script is now set by default.
* The Tree interface inherits from Clonable.
* TreeLikelihood and TreeParsimonyScore now implement the Clonable interface.
* Use node ids instead of node pointers in all Data structure (likelihood and
		parsimony).
* NNISearchable interface rewritten, now use nodes id instead of pointers.
  It now also inherits from Clonable and a new method getValue() was added.
* PhyML option in NNITopologySearch now properly implemented (check if
		multiple NNI really improve score).
* DRHomogeneousTreeLikelihood now implements the NNISearchable interface!

24/11/06 Julien Dutheil
* HomogeneousSiteSimulator now properly inherits from SequenceSimulator interface.
* New continuous rate simulation option in HomogeneousSiteSimulator.

13/10/06 Julien Dutheil
* TreeTools class was reorganized, augmented, more documented and splitted into TreeTools and TreeTemplateTools.
* Tree, TreeTemplate and Node imporved (Exception support, etc.).
* Small bugs fixed in TreeTemplate.

04/10/06 Julien Dutheil