@@ -63,7 +63,8 @@ const SubstitutionModel * AbstractMutationProcess::getSubstitutionModel() const
 int AbstractMutationProcess::mutate(int state) const
 {
   double alea = RandomTools::giveRandomNumberBetweenZeroAndEntry(1.0);
-  for(int j = 0; j < _size; j++) { 
+  for(unsigned int j = 0; j < _size; j++)
+  { 
    	if(alea < _repartition[state][j]) return j;
 	}
   return _size;
@@ -71,13 +72,16 @@ int AbstractMutationProcess::mutate(int state) const
 
 /******************************************************************************/
 
-int AbstractMutationProcess::mutate(int state, int n) const
+int AbstractMutationProcess::mutate(int state, unsigned int n) const
 {
  	int s = state;
- 	for(int k = 0; k < n; k++) {
+ 	for(unsigned int k = 0; k < n; k++)
+  {
    	double alea = RandomTools::giveRandomNumberBetweenZeroAndEntry(1.0);
-   	for(int j = 1; j < _size + 1; j++) { 
-   		if(alea < _repartition[s][j]) {
+   	for(unsigned int j = 1; j < _size + 1; j++)
+    { 
+   		if(alea < _repartition[s][j])
+      {
        	s = j;
      		break;
   		}
@@ -90,7 +94,7 @@ int AbstractMutationProcess::mutate(int state, int n) const
 
 double AbstractMutationProcess::getTimeBeforeNextMutationEvent(int state) const
 {
-	return RandomTools::randExponential(- _model -> Qij(state, state));
+	return RandomTools::randExponential(- _model->Qij(state, state));
 }
 
 /******************************************************************************/
@@ -100,7 +104,8 @@ int AbstractMutationProcess::evolve(int initialState, double time) const
 	double t = 0;
 	int currentState = initialState;
   t += getTimeBeforeNextMutationEvent(currentState);
-	while(t < time) {
+	while(t < time)
+  {
    	currentState = mutate(currentState);
 		t += getTimeBeforeNextMutationEvent(currentState);
   }
@@ -115,7 +120,8 @@ MutationPath AbstractMutationProcess::detailedEvolve(int initialState, double ti
 	double t = 0;
 	int currentState = initialState;
   t += getTimeBeforeNextMutationEvent(currentState);
-	while(t < time) {
+	while(t < time)
+  {
    	currentState = mutate(currentState);
 		mp.addEvent(currentState, t);
 		t += getTimeBeforeNextMutationEvent(currentState);
@@ -126,25 +132,31 @@ MutationPath AbstractMutationProcess::detailedEvolve(int initialState, double ti
 /******************************************************************************/
 
 SimpleMutationProcess::SimpleMutationProcess(const SubstitutionModel * model):
-AbstractMutationProcess(model) {
-	_size = model -> getAlphabet() -> getSize();
+  AbstractMutationProcess(model)
+{
+	_size = model->getNumberOfStates();
   _repartition = VVdouble(_size);
   // Each element contains the probabilities concerning each character in the alphabet.
 
   // We will now initiate each of these probability vector.
-	RowMatrix<double> Q = model -> getGenerator();
-  for(int i = 0; i < _size; i++) {
+	RowMatrix<double> Q = model->getGenerator();
+  for(unsigned int i = 0; i < _size; i++)
+  {
    	_repartition[i] = Vdouble(_size);
    	double cum = 0;
    	double sum_Q = 0;
-   	for(int j = 0; j < _size; j++) {
+   	for(unsigned int j = 0; j < _size; j++)
+    {
    		if(j != i) sum_Q += Q(i, j);
    	}
-   	for(int j = 0; j < _size; j++) {
-    	if(j != i) {
- 		   	cum += model -> Qij(i, j) / sum_Q;
+   	for(unsigned int j = 0; j < _size; j++)
+    {
+    	if(j != i)
+      {
+ 		   	cum += model->Qij(i, j) / sum_Q;
      		_repartition[i][j] = cum;
-     	} else _repartition[i][j] = -1; // Forbiden value: does not correspond to a change.
+     	}
+      else _repartition[i][j] = -1; // Forbiden value: does not correspond to a change.
     }
  	}
   // Note that I use cumulative probabilities in _repartition (hence the name).
@@ -158,17 +170,18 @@ SimpleMutationProcess::~SimpleMutationProcess() {}
 int SimpleMutationProcess::evolve(int initialState, double time) const
 {
 	// Compute all cumulative pijt:
-	unsigned int s = _model -> getAlphabet() -> getSize();
-	Vdouble pijt(s);
-	pijt[0] = _model -> Pij_t(initialState, 0, time);
-	for(unsigned int i = 1; i < s; i++) {
-		pijt[i] = pijt[i - 1] + _model -> Pij_t(initialState, i, time);
+	Vdouble pijt(_size);
+	pijt[0] = _model->Pij_t(initialState, 0, time);
+	for(unsigned int i = 1; i < _size; i++)
+  {
+		pijt[i] = pijt[i - 1] + _model->Pij_t(initialState, i, time);
 	}
 	double rand = RandomTools::giveRandomNumberBetweenZeroAndEntry(1);
-	for(unsigned int i = 0; i < s; i++) {
+	for(unsigned int i = 0; i < _size; i++)
+  {
 		if(rand < pijt[i]) return i;
 	}
-	throw Exception("SimpleSimulationProcess::evolve(intialState, time): error all pijt do not sum to one (total sum = " + TextTools::toString(pijt[s - 1]) + ").");
+	throw Exception("SimpleSimulationProcess::evolve(intialState, time): error all pijt do not sum to one (total sum = " + TextTools::toString(pijt[_size - 1]) + ").");
 }
 
 /******************************************************************************/
@@ -181,9 +194,11 @@ AbstractMutationProcess(NULL)
   	// Each element contains the probabilities concerning each character in the alphabet.
 
   	// We will now initiate each of these probability vector.
-  	for(int i = 0; i < _size; i++) {
+  	for(unsigned int i = 0; i < _size; i++)
+    {
 	    _repartition[i] = Vdouble(_size);
-    	for(int j = 0; j < _size; j++) {
+    	for(unsigned int j = 0; j < _size; j++)
+      {
       	_repartition[i][j] = (j+1.0)/_size;
     	}
   	}
