@@ -1,3 +1,8 @@
+17/02/07 Julien Dutheil
+* New (string,string) operator in DistanceMatrix.
+* New methods getState in SubstitutionModel and getRate in MarkovModulatedSubstitutionModel.
+* Simulations now work correctly with a MarkovModulatedSubstitutionModel.
+
 05/02/07 Bastien Boussau & Julien Dutheil
 * Node properties are now splitted into NodeProperties and BranchProperties.
   Bootstrap values belong to the last category, and are now properly updated
